[gd_scene load_steps=12 format=2]

[ext_resource path="res://res/Assets/Popup/SelectedMenu/Próximo.png" type="Texture" id=1]
[ext_resource path="res://res/Font/londrinasolid_108.tres" type="DynamicFont" id=2]
[ext_resource path="res://res/popups/dice_selected_popup.gd" type="Script" id=3]
[ext_resource path="res://res/Assets/SelectedDices/Dados finalizados-01.png" type="Texture" id=4]
[ext_resource path="res://res/Assets/Popup/SelectedMenu/Window.png" type="Texture" id=5]
[ext_resource path="res://res/Assets/Popup/SelectedMenu/Escrever.png" type="Texture" id=6]
[ext_resource path="res://res/Texture.tscn" type="PackedScene" id=7]
[ext_resource path="res://res/Assets/Popup/Barra de Texto.png" type="Texture" id=8]
[ext_resource path="res://res/Assets/Popup/Enviar.png" type="Texture" id=9]
[ext_resource path="res://res/Font/londrinasolid_28.tres" type="DynamicFont" id=10]
[ext_resource path="res://res/popups/text_edit.gd" type="Script" id=11]

[node name="DiceSelectedPopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.68176
margin_right = -1.68176
color = Color( 0.2, 0.2, 0.2, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="TextureRect" parent="."]
margin_left = 322.119
margin_top = 107.881
margin_right = 1619.12
margin_bottom = 1013.88
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ColorRect2"]
margin_left = 19.0
margin_top = 9.0
margin_right = 1259.0
margin_bottom = 854.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" parent="ColorRect2/Control" instance=ExtResource( 7 )]
margin_left = -3440.0
margin_top = -1850.0
margin_right = 4561.0
margin_bottom = 2650.0
rect_scale = Vector2( 0.2, 0.2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 395.0
margin_top = 146.0
margin_right = 1525.0
margin_bottom = 880.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1130.0
margin_bottom = 734.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 1130.0
margin_bottom = 129.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 565.0
margin_right = 565.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.482353, 0, 0.521569, 1 )

[node name="Timer" type="Timer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Label"]
wait_time = 0.1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 1130.0
margin_bottom = 592.0
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 353.0
margin_right = 777.0
margin_bottom = 433.0
rect_min_size = Vector2( 424, 426 )
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 424.0
margin_bottom = 433.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/CenterContainer"]
visible = false
margin_left = 212.0
margin_top = 216.0
margin_right = 212.0
margin_bottom = 216.0

[node name="Sprite" type="Sprite" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/CenterContainer"]
position = Vector2( 212, 213 )
scale = Vector2( 0.58, 0.58 )
texture = ExtResource( 4 )

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 622.0
margin_right = 1130.0
margin_bottom = 734.0
custom_constants/separation = 0

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 565.0
margin_bottom = 112.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_right = 119.0
margin_bottom = 112.0
focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="VBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 565.0
margin_right = 1130.0
margin_bottom = 112.0
size_flags_horizontal = 3
alignment = 2

[node name="CheckButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
margin_left = 446.0
margin_right = 565.0
margin_bottom = 112.0
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
visible = true
margin_left = 516.0
margin_top = 745.0
margin_right = 1294.0
margin_bottom = 890.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Popup"]
margin_right = 778.0
margin_bottom = 145.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/TextureRect"]
margin_left = 26.0
margin_top = 12.0
margin_right = 760.0
margin_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Popup/TextureRect/HBoxContainer"]
margin_right = 649.0
margin_bottom = 115.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
custom_colors/symbol_color = Color( 0.576471, 0.568627, 0.568627, 1 )
custom_colors/font_color = Color( 0.576471, 0.568627, 0.568627, 1 )
custom_colors/background_color = Color( 0.992157, 0.984314, 0.980392, 1 )
text = "Escreva a história aqui"
syntax_highlighting = true
wrap_enabled = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/TextureRect/HBoxContainer"]
margin_left = 653.0
margin_right = 734.0
margin_bottom = 115.0
alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="Popup/TextureRect/HBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 81.0
margin_bottom = 106.0

[node name="TextureButton" type="TextureButton" parent="Popup/TextureRect/HBoxContainer/VBoxContainer/CenterContainer"]
margin_right = 81.0
margin_bottom = 81.0
texture_normal = ExtResource( 9 )

[node name="Control" type="Control" parent="Popup/TextureRect/HBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 81.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 5 )
[connection signal="timeout" from="HBoxContainer/VBoxContainer/HBoxContainer/Label/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer3/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="focus_entered" from="Popup/TextureRect/HBoxContainer/TextEdit" to="Popup/TextureRect/HBoxContainer/TextEdit" method="_on_TextEdit_focus_entered"]
[connection signal="focus_exited" from="Popup/TextureRect/HBoxContainer/TextEdit" to="Popup/TextureRect/HBoxContainer/TextEdit" method="_on_TextEdit_focus_exited"]
[connection signal="pressed" from="Popup/TextureRect/HBoxContainer/VBoxContainer/CenterContainer/TextureButton" to="Popup/TextureRect/HBoxContainer/TextEdit" method="_on_TextureButton_pressed"]
